# sharaga

./: Dockerfile  pyproject.toml  requirements.txt
web/: package.json
