[tool.poetry]
name = "sharaga_ics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.105.0"
aiohttp = "^3.8.4"
ics = "^0.7"
redis = "^5.0.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
fastapi-analytics = "^1.1.4"

[tool.poetry.dev-dependencies]
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
fakeredis = "^2.10.2"
autopep8 = "^2.0.4"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
