[tool.poetry]
name = "sharaga_ics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.111.0"
aiohttp = "^3.9.5"
ics = "^0.7"
redis = "^5.0.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.5.1"}
fastapi-analytics = "^1.1.4"

[tool.poetry.dev-dependencies]
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
fakeredis = "^2.23.2"
autopep8 = "^2.0.4"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
