[tool.poetry]
name = "sharaga_ics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.2"
aiohttp = "^3.10.10"
ics = "^0.7"
redis = "^5.1.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.17.0"}
fastapi-analytics = "^1.2.3"

[tool.poetry.dev-dependencies]
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
fakeredis = "^2.25.1"
autopep8 = "^2.3.1"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
